-Einstellungskonzept und -menü umgesetzt -Beispiel, wie man auf Änderungen von Einstellungen reagieren kann, eingefügt -Zurück-Pfeil links-oben umgesetzt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">media-player-app</string>
+    <string name="main_settings">Einstellungen</string>
+    <string name="willkommenstext">Guten Tag</string>
+    <string name="wunschtext">Wir wünschen Ihnen viel Spaß mit der App!</string>
+    <string name="title_activity_live_stream">Live Stream</string>
+    <string name="title_activity_mediathek">Mediathek</string>
+    <string name="title_activity_credtis">Credits</string>
+
+
+    <!-- Strings related to Settings -->
+
+    <string name="benutzername_preferences_title">Benutzername</string>
+    <string name="benutzername_preferences_key">Benutzername Key</string>
+    <string name="benutzername_preferences_default">Nico Weber</string>
+    <string name="title_activity_settings">Einstellungen</string>
+
+
 </resources>
