--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,21 +31,6 @@
     <string name="title_activity_settings">Settings</string>
     <string name="BenutzernamenÄnderungsBenachrichtigung">Settings %1$s were changed</string>
     <string name="LeererBenutzernameEingegebenBenachrichtigung">The Username must not be empty!</string>
-    <string name="title_activity_login">Login</string>
-
-    <!-- Strings related to login -->
-
-    <string name="login">Login</string>
-    <string name="hint_email">E-Mail</string>
-    <string name="hint_passwort">Password</string>
-    <string name="login_button_text">Login</string>
-
-    <string name="warnung_falsche_email">Your E-Mail Address must be valid!</string>
-    <string name="warnung_unbekannte_email">There is no account for this email address</string>
-    <string name="warnung_fehlendes_passwort">You have to enter a password</string>
-    <string name="warnung_falsches_passwort">Password is wrong</string>
-    <string name="meldung_pruefung_erfolgt">Login was successfull</string>
-    <string name="title_activity_login_activity_originial">Login</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -57,8 +42,7 @@
     <string name="error_incorrect_password">This password is not valid!</string>
     <string name="error_field_required">This is a required field!</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+        completions."</string>
     <string name="stay_logged_in">Keep me logged in</string>
 
 </resources>
