--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,23 @@
 <resources>
+    <!-- Strings related to Main menu -->
     <string name="app_name">Regiotainment MediaPlayer</string>
     <string name="willkommenstext">Hello</string>
     <string name="wunschtext">Have fun with the app!</string>
-    <string name="title_activity_main_menue">Mainmenue</string>
+    <string name="title_activity_main_menue">Main menu</string>
     <string name="title_activity_live_stream">Live Stream</string>
     <string name="title_activity_mediathek">Media center</string>
     <string name="title_activity_credtis">Credits</string>
 
     <!-- Strings related to MainMenueActivity -->
-    <string name="app_closing_warning">Press again to leave the app.</string>
+    <string name="app_closing_warning">Press AGAIN to leave the app.</string>
 
     <!-- Strings related to Navigation -->
-
     <string name="menu_item_1">Live Stream</string>
     <string name="menu_item_2">Media center</string>
     <string name="menu_item_3">Credits</string>
 
+    <!-- Strings related to LiveStream -->
+    <string name="buffer_message">Stream is buffering...</string>
 
     <!-- Strings related to Settings -->
 
@@ -27,7 +29,7 @@
     <string name="benutzername_preferences_key">Benutzername Key</string>
     <string name="benutzername_preferences_default">Nico Weber</string>
     <string name="landscape_preferences_key">Landscape Key</string>
-    <string name="landscape_preferences_title">Videos in landscape mode</string>
+    <string name="landscape_preferences_title">Videos only in landscape mode</string>
     <string name="title_activity_settings">Settings</string>
     <string name="BenutzernamenÄnderungsBenachrichtigung">Settings %1$s were changed</string>
     <string name="LeererBenutzernameEingegebenBenachrichtigung">The Username must not be empty!</string>
@@ -37,8 +39,7 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Login</string>
     <string name="action_sign_in_short">Login</string>
-    <string name="error_invalid_email">This username is not valid!</string>
-    <string name="error_invalid_password">This password is too short!</string>
+    <string name="error_invalid_email">This E-Mail address is not valid!</string>
     <string name="error_incorrect_password">This password is not valid!</string>
     <string name="error_field_required">This is a required field!</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
