-die zuletzt eigegebene erfolgreich eingeloggte E-Mail Adresse wird nun komplett im E-Mail Feld behalten und es wird dann automatisch das Passwort-Feld in den Fokus gerückt, ansonsten leeres E-Mail Feld -Benutzernamen-Preference wurde aus den Einstellungen entfernt
-für das Laden der Preferences wird nun ein Preference-Fragment benutzt, da die alte Methode "deprecated" war und nicht mehr benutzt werden sollte

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -27,9 +27,7 @@
     <string name="menu_item_einstellungen">Einstellungen</string>
     <string name="menu_item_hilfe">Hilfe</string>
 
-    <string name="benutzername_preferences_title">Benutzername</string>
-    <string name="benutzername_preferences_key">Benutzername Key</string>
-    <string name="benutzername_preferences_default">Nico Weber</string>
+    <string name="E_Mail_Address_preferences_key">E-Mail Key</string>
     <string name="landscape_preferences_key">Landscape Key</string>
     <string name="landscape_preferences_title">Videos nur im Querformat</string>
     <string name="title_activity_settings">Einstellungen</string>
