--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,10 @@
     <string name="E_Mail_Address_preferences_key">E-Mail Key</string>
     <string name="landscape_preferences_key">Landscape Key</string>
     <string name="landscape_preferences_title">Videos only in landscape mode</string>
+
+    <string name="wlan_preferences_key">WLAN Key</string>
+    <string name="wlan_preferences_title">Streaming Videos using WLAN if able</string>
+
     <string name="title_activity_settings">Settings</string>
     <string name="BenutzernamenÄnderungsBenachrichtigung">Settings %1$s were changed</string>
     <string name="LeererBenutzernameEingegebenBenachrichtigung">The Username must not be empty!</string>
