Card Layout hinzugefügt. Außerdem Icons für das Menü, allerdings ist zu klären, ob das wirklich gewollt ist, da die Icons nicht direkt angezeigt werden können (von Android aus).
Logout prüfen, hatte da eine Fehlermeldung.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -47,4 +47,6 @@
     </string>
     <string name="stay_logged_in">Eingeloggt bleiben</string>
 
+    <string name="not_available">Nicht verfügbar!</string>
+
 </resources>
