--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
         completions."</string>
     <string name="stay_logged_in">Keep me logged in</string>
 
+    <string name="not_available">Not available!</string>
+
 </resources>
