--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -32,7 +32,7 @@
     <string name="landscape_preferences_title">Videos nur im Querformat</string>
 
     <string name="wlan_preferences_key">WLAN Key</string>
-    <string name="wlan_preferences_title">Videos über WLAN streamen, falls Verbindung vorhanden</string>
+    <string name="wlan_preferences_title">Stream nur via WLAN</string>
 
     <string name="title_activity_settings">Einstellungen</string>
     <string name="BenutzernamenÄnderungsBenachrichtigung">Einstellung %1$s wurde geändert</string>
@@ -46,14 +46,11 @@
     <string name="error_invalid_email">Diese E-Mail Adresse ist ungültig!</string>
     <string name="error_incorrect_password">Dieses Passwort ist ungültig!</string>
     <string name="error_field_required">Dieses Feld ist erforderlich</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
     <string name="stay_logged_in">Eingeloggt bleiben</string>
+
     <!-- Strings related to Dialogs -->
     <string name="enableWLAN">WLAN aktivieren</string>
     <string name="cancel">Abbrechen</string>
-    <string name="activateWlanMessage">WLAN Netzwerk erreichbar. WLAN am GErät aktivieren?</string>
+    <string name="activateWlanMessage">WLAN is momentan aus. WLAN aktivieren?</string>
     <string name="noWlan">Kein WLAN verfügbar</string>
-    <string name="not_available">Nicht verfügbar!</string>
 </resources>
