--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,14 +44,12 @@
     <string name="error_invalid_email">This E-Mail address is not valid!</string>
     <string name="error_incorrect_password">This password is not valid!</string>
     <string name="error_field_required">This is a required field!</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."</string>
     <string name="stay_logged_in">Keep me logged in</string>
 
     <!-- Strings related to Dialogs -->
     <string name="enableWLAN">Enable WLAN</string>
     <string name="cancel">Cancel</string>
-    <string name="activateWlanMessage">A WLAN network is available. Activate WLAN on your Device?</string>
+    <string name="activateWlanMessage">WLAN is currently off. Activate WLAN?</string>
     <string name="noWlan">No WLAN is avaiable</string>
     <string name="not_available">Not available!</string>
 
