--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -26,12 +26,20 @@
     <string name="menu_item_einstellungen">Einstellungen</string>
     <string name="menu_item_hilfe">Hilfe</string>
 
-    <string name="E_Mail_Address_preferences_key">E-Mail Key</string>
+    <string name="e_mail_address_preferences_key">E-Mail Key</string>
+
     <string name="landscape_preferences_key">Landscape Key</string>
-    <string name="landscape_preferences_title">Streams nur im Querformat anzeigen</string>
+    <string name="landscape_preferences_title">Querformat-Modus</string>
+    <string name="landscape_preferences_summary">Streams werden nur im Querformat-Modus angezeigt</string>
 
     <string name="wlan_preferences_key">WLAN Key</string>
-    <string name="wlan_preferences_title">Streams nur via WLAN</string>
+    <string name="wlan_preferences_title">Nur WLAN</string>
+    <string name="wlan_preferences_summary">Streams nutzen nur die WLAN Verbindung</string>
+
+    <string name="delete_email_history_preferences_key">Delete History Key</string>
+    <string name="delete_email_history_preferences_title">E-Mail Verlauf löschen</string>
+    <string name="delete_email_history_preferences_summary">Löscht den E-Mail Verlauf ihrer Logins</string>
+    <string name="delete_email_history_preferences_toast">E-Mail Verlauf wurde gelöscht</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">E-Mail</string>
