--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,20 @@
     <string name="menu_item_einstellungen">Settings</string>
     <string name="menu_item_hilfe">Help</string>
 
-    <string name="E_Mail_Address_preferences_key">E-Mail Key</string>
+    <string name="e_mail_address_preferences_key">E-Mail Key</string>
+
     <string name="landscape_preferences_key">Landscape Key</string>
-    <string name="landscape_preferences_title">Streams only in landscape mode</string>
+    <string name="landscape_preferences_title">Landscape mode</string>
+    <string name="landscape_preferences_summary">Streams are only shown in landscape mode</string>
 
     <string name="wlan_preferences_key">WLAN Key</string>
-    <string name="wlan_preferences_title">Streams only via WLAN</string>
+    <string name="wlan_preferences_title">WLAN only</string>
+    <string name="wlan_preferences_summary">Streams only use a WLAN connection</string>
+
+    <string name="delete_email_history_preferences_key">Delete History Key</string>
+    <string name="delete_email_history_preferences_title">Delete e-mail history</string>
+    <string name="delete_email_history_preferences_summary">Deletes the e-mail history of your logins</string>
+    <string name="delete_email_history_preferences_toast">e-mail history has been deleted</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">E-Mail</string>
