- Timeout des Bufferings von einem Video nach 10 Sekunden, mittels eines eigenen Threads - VideoNotAvailableDialogFragment eingefügt, dass der Anwender die Meldung bekommt, dass das Video nicht geladen werden konnte nach dem TImeout - Card erweitert um eine URL, die an die LiveStreamActivity durchgereicht wird - Parcelable in der Klasse Card implementiert, um die Card als Objekt an die CardDescriptionActivity weiterreichen zu können

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,4 +62,8 @@
     <string name="accept_button">Okay</string>
     <string name="noConnectionMessagePart1">Es kann keine Verbindung mit dem Internet hergestellt werden.</string>
     <string name="noConnectionMessagePart2">Stellen Sie sicher, dass eine Internetverbindung besteht und versuchen sie es erneut.</string>
+
+    <!-- Strings related to Video not available Dialog -->
+    <string name="videoNotAvailableAccept_button">Okay</string>
+    <string name="videoNotAvailablePart1">Das Video konnte nicht geladen werden.</string>
 </resources>
