--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -33,9 +33,9 @@
     <string name="landscape_preferences_title">Querformat-Modus</string>
     <string name="landscape_preferences_summary">Streams werden nur im Querformat-Modus angezeigt</string>
 
-    <string name="wlan_preferences_key">WLAN Key</string>
-    <string name="wlan_preferences_title">Nur WLAN</string>
-    <string name="wlan_preferences_summary">Streams nutzen nur die WLAN Verbindung</string>
+    <string name="wifi_preferences_key">WiFi Key</string>
+    <string name="wifi_preferences_title">Nur WiFi</string>
+    <string name="wifi_preferences_summary">Streams nutzen nur die WLAN Verbindung</string>
 
     <string name="delete_email_history_preferences_key">Delete History Key</string>
     <string name="delete_email_history_preferences_title">E-Mail Verlauf löschen</string>
@@ -52,12 +52,12 @@
     <string name="error_field_required">Dieses Feld ist erforderlich!</string>
     <string name="stay_logged_in">Eingeloggt bleiben</string>
 
-    <!-- Strings related to no activated WLAN Dialog -->
-    <string name="enableWLAN">WLAN aktivieren</string>
+    <!-- Strings related to no activated WiFi Dialog -->
+    <string name="enableWiFi">WLAN aktivieren</string>
     <string name="cancel">Abbrechen</string>
-    <string name="activateWlanMessagePart1">WLAN ist momentan ausgeschaltet.</string>
-    <string name="activateWlanMessagePart2">WLAN jetzt aktivieren?</string>
-    <string name="noWlan">Kein WLAN-Netzwerk verfügbar</string>
+    <string name="activateWiFiMessagePart1">WLAN ist momentan ausgeschaltet.</string>
+    <string name="activateWiFiMessagePart2">WLAN jetzt aktivieren?</string>
+    <string name="noWiFi">Kein WLAN-Netzwerk verfügbar</string>
 
     <!-- Strings related to NoConnection-Dialog -->
     <string name="accept_button">Okay</string>
@@ -105,8 +105,8 @@
         ausschließlich im Querformat abgespielt werden. Ist der Querformat-Modus nicht aktiviert, können Sie zwischen Hoch-
         und Querformat wechseln, indem Sie Ihr Mobiltelefon drehen. Dazu muss allerdings die „Autodreh“-Option in den
         Einstellungen Ihres Handys aktiviert sein.</string>
-    <string name="help_settings_wlan">Nur WLAN</string>
-    <string name="help_settings_wlan_text">Wenn Sie wünschen, dass der Stream nur bei einer aktiven WLAN-Verbindung geladen wird,
+    <string name="help_settings_wifi">Nur WLAN</string>
+    <string name="help_settings_wifi_text">Wenn Sie wünschen, dass der Stream nur bei einer aktiven WLAN-Verbindung geladen wird,
         so aktivieren Sie die Option „Nur WLAN“. Eine Wiedergabe des Stream über Mobile Daten ist somit nicht mehr möglich. Dies
         ist von Vorteil, wenn Sie nur über ein geringes Datenvolumen verfügen. Ist das WLAN deaktiviert, so werden Sie mit einer
         Meldung darauf hingewiesen, und können es so aktivieren.</string>
@@ -114,8 +114,8 @@
     <string name="help_settings_email_text">Um den Verlauf der Email-Adressen, mit denen sich bereits eingeloggt wurde und die
         somit auf der Login-Seite als Vorschläge erscheinen, zu löschen, tippen Sie auf „E-Mail Verlauf löschen“.</string>
     <string name="help_errormessages">Fehlermeldungen</string>
-    <string name="help_errormessages_nowlan">WLAN ist ausgeschaltet</string>
-    <string name="help_errormessages_nowlan_text">Die Meldung, dass das WLAN ausgeschaltet ist, erscheint dann, wenn die „Nur WLAN“-Option
+    <string name="help_errormessages_nowifi">WLAN ist ausgeschaltet</string>
+    <string name="help_errormessages_nowifi_text">Die Meldung, dass das WLAN ausgeschaltet ist, erscheint dann, wenn die „Nur WLAN“-Option
         aktiviert ist, und das WLAN des Mobiltelefons ausgeschaltet ist. Die Fehlermeldung bietet die Möglichkeit, das WLAN anzuschalten</string>
     <string name="help_errormessages_nointernet">Kein Internet</string>
     <string name="help_errormessages_nointernet_text">Erscheint die Meldung, dass kein Internet verfügbar ist, so kann die App weder über WLAN noch
