--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,9 @@
     <string name="landscape_preferences_title">Landscape mode</string>
     <string name="landscape_preferences_summary">Streams are only shown in landscape mode</string>
 
-    <string name="wlan_preferences_key">WLAN Key</string>
-    <string name="wlan_preferences_title">Wi-Fi only</string>
-    <string name="wlan_preferences_summary">Streams only use a Wi-Fi connection</string>
+    <string name="wifi_preferences_key">WiFi Key</string>
+    <string name="wifi_preferences_title">Wi-Fi only</string>
+    <string name="wifi_preferences_summary">Streams only use a Wi-Fi connection</string>
 
     <string name="delete_email_history_preferences_key">Delete History Key</string>
     <string name="delete_email_history_preferences_title">Delete e-mail history</string>
@@ -52,12 +52,12 @@
     <string name="error_field_required">This is a required field!</string>
     <string name="stay_logged_in">Keep me logged in</string>
 
-    <!-- Strings related to no activated WLAN Dialog -->
-    <string name="enableWLAN">Enable Wi-Fi</string>
+    <!-- Strings related to no activated WiFi Dialog -->
+    <string name="enableWiFi">Enable Wi-Fi</string>
     <string name="cancel">Cancel</string>
-    <string name="activateWlanMessagePart1">Wi-Fi is currently off.</string>
-    <string name="activateWlanMessagePart2">Activate Wi-Fi now?</string>
-    <string name="noWlan">No Wi-Fi network is avaiable</string>
+    <string name="activateWiFiMessagePart1">Wi-Fi is currently off.</string>
+    <string name="activateWiFiMessagePart2">Activate Wi-Fi now?</string>
+    <string name="noWiFi">No Wi-Fi network is avaiable</string>
 
     <!-- Strings related to NoConnection-Dialog -->
     <string name="accept_button">Okay</string>
@@ -105,20 +105,20 @@
         ausschließlich im Querformat abgespielt werden. Ist der Querformat-Modus nicht aktiviert, können Sie zwischen Hoch-
         und Querformat wechseln, indem Sie Ihr Mobiltelefon drehen. Dazu muss allerdings die „Autodreh“-Option in den
         Einstellungen Ihres Handys aktiviert sein.</string>
-    <string name="help_settings_wlan">Wi-Fi only</string>
-    <string name="help_settings_wlan_text">Wenn Sie wünschen, dass der Stream nur bei einer aktiven WLAN-Verbindung geladen wird,
-        so aktivieren Sie die Option „Nur WLAN“. Eine Wiedergabe des Stream über Mobile Daten ist somit nicht mehr möglich. Dies
-        ist von Vorteil, wenn Sie nur über ein geringes Datenvolumen verfügen. Ist das WLAN deaktiviert, so werden Sie mit einer
+    <string name="help_settings_wifi">Wi-Fi only</string>
+    <string name="help_settings_wifi_text">Wenn Sie wünschen, dass der Stream nur bei einer aktiven WiFi-Verbindung geladen wird,
+        so aktivieren Sie die Option „Nur WiFi“. Eine Wiedergabe des Stream über Mobile Daten ist somit nicht mehr möglich. Dies
+        ist von Vorteil, wenn Sie nur über ein geringes Datenvolumen verfügen. Ist das WiFi deaktiviert, so werden Sie mit einer
         Meldung darauf hingewiesen, und können es so aktivieren.</string>
     <string name="help_settings_email">Delete e-mail history</string>
     <string name="help_settings_email_text">Um den Verlauf der Email-Adressen, mit denen sich bereits eingeloggt wurde und die
         somit auf der Login-Seite als Vorschläge erscheinen, zu löschen, tippen Sie auf „E-Mail Verlauf löschen“.</string>
     <string name="help_errormessages">Error Messages</string>
-    <string name="help_errormessages_nowlan">WiFi is turned off</string>
-    <string name="help_errormessages_nowlan_text">Die Meldung, dass das WLAN ausgeschaltet ist, erscheint dann, wenn die „Nur WLAN“-Option
-        aktiviert ist, und das WLAN des Mobiltelefons ausgeschaltet ist. Die Fehlermeldung bietet die Möglichkeit, das WLAN anzuschalten</string>
+    <string name="help_errormessages_nowifi">WiFi is turned off</string>
+    <string name="help_errormessages_nowifi_text">Die Meldung, dass das WiFi ausgeschaltet ist, erscheint dann, wenn die „Nur WiFi“-Option
+        aktiviert ist, und das WiFi des Mobiltelefons ausgeschaltet ist. Die Fehlermeldung bietet die Möglichkeit, das WiFi anzuschalten</string>
     <string name="help_errormessages_nointernet">No Internet</string>
-    <string name="help_errormessages_nointernet_text">Erscheint die Meldung, dass kein Internet verfügbar ist, so kann die App weder über WLAN noch
-        über Mobile Daten auf das Internet zugreifen. Ein Grund kann zum einen sein, dass das WLAN sowie die Mobilen Daten des Geräts deaktiviert
+    <string name="help_errormessages_nointernet_text">Erscheint die Meldung, dass kein Internet verfügbar ist, so kann die App weder über WiFi noch
+        über Mobile Daten auf das Internet zugreifen. Ein Grund kann zum einen sein, dass das WiFi sowie die Mobilen Daten des Geräts deaktiviert
         sind. Zum anderen kann es aber auch sein, dass das Telefon keinen Empfang hat.</string>
 </resources>
